force-app/main/default/objects/Sales_Order__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <label>Bill To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Warehouse_City</valueSetName>
    </valueSet>
</CustomField>