force-app/main/default/objects/Sales_Order__c/fields/Branch_Office_Formula__c.field-meta.xml
<CustomField>
    <fullName>Branch_Office_Formula__c</fullName>
    <formula>TEXT(Opportunity__r.Office__c)</formula>
    <label>Branch Office</label>
    <type>Text</type>
</CustomField>