force-app/main/default/objects/Sales_Order__c/fields/CGST__c.field-meta.xml
<CustomField>
    <fullName>CGST__c</fullName>
    <label>CGST (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>