force-app/main/default/objects/Sales_Order__c/fields/Contact_No_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contact_No_Formula__c</fullName>
    <formula>Contact_Person__r.MobilePhone</formula>
    <label>Contact No</label>
    <type>Text</type>
</CustomField>