force-app/main/default/objects/Sales_Order__c/fields/Customer_Po_Number_F_Opp__c.field-meta.xml
<CustomField>
    <fullName>Customer_Po_Number_F_Opp__c</fullName>
    <formula>Opportunity__r.Customer_PO_No__c</formula>
    <label>Customer PO Number</label>
    <type>Text</type>
</CustomField>