force-app/main/default/objects/Sales_Order__c/fields/Date_Of_Supply_Formula__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Supply_Formula__c</fullName>
    <formula>Text(Opportunity__r.Date_of_Supply__c)</formula>
    <label>Date Of Supply</label>
    <type>Text</type>
</CustomField>