force-app/main/default/objects/Sales_Order__c/fields/Emai_Formula__c.field-meta.xml
<CustomField>
    <fullName>Emai_Formula__c</fullName>
    <formula>Customer_Name__r.Email__c</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>