force-app/main/default/objects/Sales_Order__c/fields/ESN_No_lookup__c.field-meta.xml
<CustomField>
    <fullName>ESN_No_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ESN No</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>