force-app/main/default/objects/Sales_Order__c/fields/GSTIN_No__c.field-meta.xml
<CustomField>
    <fullName>GSTIN_No__c</fullName>
    <label>GSTIN No.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>