force-app/main/default/objects/Sales_Order__c/fields/GSTIN_No_Formula__c.field-meta.xml
<CustomField>
    <fullName>GSTIN_No_Formula__c</fullName>
    <formula>Customer_Name__r.GSTIN_No__c</formula>
    <label>GSTIN No.</label>
    <type>Text</type>
</CustomField>