force-app/main/default/objects/Sales_Order__c/fields/Line_Item_Discount__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Discount__c</fullName>
    <label>Line Item Discount</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>