force-app/main/default/objects/Sales_Order__c/fields/Max_Discount__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Max Discount</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>