force-app/main/default/objects/Sales_Order__c/fields/Packing_Charges__c.field-meta.xml
<CustomField>
    <fullName>Packing_Charges__c</fullName>
    <label>Packing Charges</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>