force-app/main/default/objects/Sales_Order__c/fields/Payment_Terms_F_Opp__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_F_Opp__c</fullName>
    <formula>Opportunity__r.Payment_Terms__c</formula>
    <label>Payment Terms</label>
    <type>Text</type>
</CustomField>