force-app/main/default/objects/Sales_Order__c/fields/PI_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>PI_Type_Formula__c</fullName>
    <formula>TEXT(Opportunity__r.PI_Type__c)</formula>
    <label>PI Type</label>
    <type>Text</type>
</CustomField>