force-app/main/default/objects/Sales_Order__c/fields/Po_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Po_Date_Formula__c</fullName>
    <formula>Text( Opportunity__r.PO_Date__c )</formula>
    <label>PO Date</label>
    <type>Text</type>
</CustomField>