force-app/main/default/objects/Sales_Order__c/fields/Proforma_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice_Number__c</fullName>
    <formula>Opportunity__r.Proforma_Invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proforma Invoice Number</label>
    <type>Text</type>
</CustomField>