force-app/main/default/objects/Sales_Order__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <formula>Opportunity__r.Quote_Number_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Number</label>
    <type>Text</type>
</CustomField>