force-app/main/default/objects/Sales_Order__c/fields/Reverse_Charge__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Charge__c</fullName>
    <formula>Text(Opportunity__r.Reverse_Charges__c)</formula>
    <label>Reverse Charge</label>
    <type>Text</type>
</CustomField>