force-app/main/default/objects/Sales_Order__c/fields/Sales_From_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_From_Name__c</fullName>
    <formula>TEXT(Owner:User.Branch__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales From Name</label>
    <type>Text</type>
</CustomField>