force-app/main/default/objects/Sales_Order__c/fields/Sales_Order_Acknowledge_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Acknowledge_Number__c</fullName>
    <formula>if( text(Ware_House__r.City__c) == &apos;Kolkata&apos;, &apos;PPLCU&apos;+RIGHT(text(YEAR( DATEVALUE(CreatedDate))), LEN(text(YEAR( DATEVALUE(CreatedDate)))) - 2)+&apos;SOD&apos;+RIGHT( Name , LEN(Name) - 4),if( text(Ware_House__r.City__c) == &apos;Gurugram&apos;, &apos;PPLHO&apos;+RIGHT(text(YEAR( DATEVALUE(CreatedDate))), LEN(text(YEAR( DATEVALUE(CreatedDate)))) - 2)+&apos;SOD&apos;+RIGHT( Name , LEN(Name) - 4),&apos;Please select office branch for the Opportunity.&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Acknowledge Number</label>
    <type>Text</type>
</CustomField>