force-app/main/default/objects/Sales_Order__c/fields/Shipping_Account__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Orders (Shipping Account Address)</relationshipLabel>
    <relationshipName>Sales_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>