force-app/main/default/objects/Sales_Order__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>if(LEN(Customer_Name__r.ShippingStreet )&gt;0, Customer_Name__r.ShippingStreet &amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(Customer_Name__r.ShippingCity  )&gt;0, &quot; &quot; &amp;Customer_Name__r.ShippingCity  &amp; &quot; &quot; , &quot;&quot; ) &amp;
if(LEN(Customer_Name__r.ShippingState )&gt;0, &quot; &quot; &amp; Customer_Name__r.ShippingState &amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN( Customer_Name__r.ShippingPostalCode )&gt;0, &quot; &quot; &amp;  Customer_Name__r.ShippingPostalCode  &amp; &quot; &quot;,&quot; &quot;) &amp; BR() &amp;
If(LEN( Customer_Name__r.ShippingCountry   ) &gt;0,&quot; &quot; &amp; Customer_Name__r.ShippingCountry  ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>