force-app/main/default/objects/Sales_Order__c/fields/Shipping_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Formula__c</fullName>
    <formula>if(LEN(Shipping_Street__c)&gt;0, Shipping_Street__c&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(Shipping_City__c)&gt;0, &quot; &quot; &amp;Shipping_City__c&amp; &quot; &quot; , &quot;&quot; ) &amp;
if(LEN(Shipping_State_Province__c)&gt;0, &quot; &quot; &amp; Shipping_State_Province__c&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(Shipping_Zip_Postal_Code__c)&gt;0, &quot; &quot; &amp; Shipping_Zip_Postal_Code__c &amp; &quot; &quot;,&quot; &quot;) &amp; BR() &amp;
If(LEN( Shipping_Country__c ) &gt;0,&quot; &quot; &amp; Shipping_Country__c ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address Formula</label>
    <type>Text</type>
</CustomField>