force-app/main/default/objects/Sales_Order__c/fields/Shipping_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State_Code__c</fullName>
    <label>Shipping State Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>