force-app/main/default/objects/Sales_Order__c/fields/Shipping_State_Code_frm__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State_Code_frm__c</fullName>
    <formula>Shipping_Account__r.Shipping_State_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping State Code</label>
    <type>Text</type>
</CustomField>