force-app/main/default/objects/Sales_Order__c/fields/Shipping_Terms__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Terms__c</fullName>
    <label>Shipping Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>