force-app/main/default/objects/Sales_Order__c/fields/SOA_No__c.field-meta.xml
<CustomField>
    <fullName>SOA_No__c</fullName>
    <label>SOA No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>