force-app/main/default/objects/Sales_Order__c/fields/State1__c.field-meta.xml
<CustomField>
    <fullName>State1__c</fullName>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>