force-app/main/default/objects/Sales_Order__c/fields/Term_and_Condition__c.field-meta.xml
<CustomField>
    <fullName>Term_and_Condition__c</fullName>
    <label>Term and Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>