force-app/main/default/objects/Sales_Order__c/fields/Transporter_Name__c.field-meta.xml
<CustomField>
    <fullName>Transporter_Name__c</fullName>
    <label>Transporter  Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>