force-app/main/default/objects/Sales_Order__c/fields/Transporter_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Transporter_Name_Formula__c</fullName>
    <formula>Opportunity__r.Transporter_Name__c</formula>
    <label>Transporter  Name</label>
    <type>Text</type>
</CustomField>