force-app/main/default/objects/Sales_Order__c/fields/Transpotaion_Mode__c.field-meta.xml
<CustomField>
    <fullName>Transpotaion_Mode__c</fullName>
    <formula>TEXT( Opportunity__r.Transportation_Mode__c )</formula>
    <label>Transportation Mode</label>
    <type>Text</type>
</CustomField>