force-app/main/default/objects/Sales_Order__c/fields/Type_SOA__c.field-meta.xml
<CustomField>
    <fullName>Type_SOA__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Supply</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>FOC</fullName>
            </value>
            <value>
                <fullName>Re-Work</fullName>
                <isActive>false</isActive>
                <label>Re-Work</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>