force-app/main/default/objects/Sales_Order__c/fields/Vehicle_Docket_No_F_Opp__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Docket_No_F_Opp__c</fullName>
    <formula>Opportunity__r.Vehicle_Docket_No__c</formula>
    <label>Vehicle / Docket No.</label>
    <type>Text</type>
</CustomField>