force-app/main/default/objects/Sales_Order__c/fields/Ware_House__c.field-meta.xml
<CustomField>
    <fullName>Ware_House__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales From</label>
    <referenceTo>Ware_House__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>