force-app/main/default/objects/Sales_Order__c/validationRules/StateCode_Field_Validate.validationRule-meta.xml
<ValidationRule>
    <fullName>StateCode_Field_Validate</fullName>
    <active>false</active>
    <description>If Status is approved so bill to filled can&apos;t blank.</description>
    <errorConditionFormula>AND(ISPICKVAL( Status__c , &quot;Approved&quot;), IF( ISBLANK( State_Code__c ) , true , false) )</errorConditionFormula>
    <errorDisplayField>State_Code__c</errorDisplayField>
    <errorMessage>Field required.</errorMessage>
</ValidationRule>