force-app/main/default/objects/Sales_Order__c/validationRules/Status_not_change_after_approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_not_change_after_approved</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE( Status__c ),&quot;Approved&quot;)&amp;&amp; ISPICKVAL( Status__c ,&quot;Draft&quot;)</errorConditionFormula>
    <errorMessage>Sales order is approved will not set the draft.</errorMessage>
</ValidationRule>