force-app/main/default/objects/Sales_Order__c/validationRules/Status_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Order</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE( Status__c ),&quot;Draft&quot;)&amp;&amp; ISPICKVAL( Status__c ,&quot;Approved&quot;)</errorConditionFormula>
    <errorMessage>Please Freeze before Approved/Not Approved.</errorMessage>
</ValidationRule>