force-app/main/default/objects/Sales_Order__c/validationRules/Status_Order_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Order_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE( Status__c ),&quot;Freeze&quot;)&amp;&amp; ISPICKVAL( Status__c ,&quot;Draft&quot;)</errorConditionFormula>
    <errorMessage>You can not change status to Draft after Freeze.</errorMessage>
</ValidationRule>