force-app/main/default/objects/Sales_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Contact_Person__c</columns>
    <columns>Date_Of_Supply__c</columns>
    <columns>Ware_House__c</columns>
    <columns>Remark__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>