force-app/main/default/objects/Sales_Order__c/listViews/Approved_SOA_List_Smruti.listView-meta.xml
<ListView>
    <fullName>Approved_SOA_List_Smruti</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contact_Person__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Smruti</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved SOA List - Smruti</label>
    <sharedTo>
        <group>East_Parts_Team</group>
    </sharedTo>
</ListView>