force-app/main/default/objects/Sales_Order__c/listViews/Draft_SOA.listView-meta.xml
<ListView>
    <fullName>Draft_SOA</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Type_SOA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Pending SOA</label>
</ListView>