force-app/main/default/objects/Sales_Order__c/listViews/Not_Approved_SOA.listView-meta.xml
<ListView>
    <fullName>Not_Approved_SOA</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Type_SOA__c</columns>
    <filterScope>Everything</filterScope>
    <label>Not Approved SOA</label>
</ListView>