force-app/main/default/objects/Sales_Order__c/listViews/Pending_SOA_List_Sathi.listView-meta.xml
<ListView>
    <fullName>Pending_SOA_List_Sathi</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contact_Person__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Sathi</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Pending SOA List - Sathi</label>
    <sharedTo>
        <group>North_Parts_Team</group>
    </sharedTo>
</ListView>